--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 <!-- header -->
 <section id="header">
   <header>
-    <h1>cloud mania</h1>
-    <p>eaisest way to create website ever.</p>
+    <h1>Cloud Mania</h1>
+    <p>Easiest way to host website ever.</p>
   </header>
   <footer>
-    <a href="#banner" class="button style2 scrolly scrolly-centered">try it now</a>
+    <a href="#banner" class="button style2 scrolly scrolly-centered">Try it now</a>
   </footer>
 </section>
 
@@ -48,25 +48,25 @@
   {% if not forgot %}
   {% if not user %}
   <header>
-    <h2 id="register-header">don't have an account? sign up below</h2>
+    <h2 id="register-header">Don't have an account? Sign up below</h2>
   </header>
   {% endif %}
   {% if not user %}
   <form action="/register#banner" method="post">
-    <div><input type="text" class="text" name="email" placeholder="email"></div>
-    <div><input type="password" class="text" name="password" placeholder="password"></div>
-    <div><input type="password" class="text" name="confirmpassword" placeholder="confirm password"></div>
-    <input type="submit" class="button style2" value="register" name="register" />
-    <input type="button" class="button style2" value="already registered?" name="login" />
-    <div><a href="/forgot">forgot password?</a></div>
+    <div><input type="text" class="text" name="email" placeholder="Email"></div>
+    <div><input type="password" class="text" name="password" placeholder="Password"></div>
+    <div><input type="password" class="text" name="confirmpassword" placeholder="Confirm password"></div>
+    <input type="submit" class="button style2" value="Register" name="register" />
+    <input type="button" class="button style2" value="Already Registered?" name="login" />
+    <div><a href="/forgot#banner">Forgot password?</a></div>
   </form>
   {% else %}
   {% if not changepassword and not addsite %}
-  <h2>welcome, {{user.email}}</h2>
+  <h2>Welcome, {{user.email}}</h2>
   <br>
   {% if sites and is_connected %}
   <div>
-    <h2>list of sites:</h2><ol>
+    <h2>List of sites:</h2><ol>
       {% for sitename, siteid in sites %}
       <li>{{sitename}} - <a target="_blank" href="/u/{{siteid}}/index.html">{{siteid}}</a></li>
       {% endfor %}
@@ -74,70 +74,70 @@
   </div>
   {% endif %}
   {% if is_connected %}
-  <a class="button style2" href="/addsite#banner">add site</a>
+  <a class="button style2" href="/addsite#banner">Add site</a>
   {% endif %}
-  <a class="button style2" href="/changepassword#banner">change password</a>
+  <a class="button style2" href="/changepassword#banner">Change Password</a>
   {% if not is_connected %}
-  <a class="button style2" href="/connect">connect dropbox</a>
+  <a class="button style2" href="/connect">Connect Dropbox</a>
   {% else %}
-  <a class="button style2" href="/disconnect">disconnect dropbox</a>
+  <a class="button style2" href="/disconnect">Disconnect Dropbox</a>
   {% endif %}
   {% endif %}
   {% if changepassword %}
   <header>
-    <h2 id="changepassword-header">change password</h2>
+    <h2 id="changepassword-header">Change Password</h2>
   </header>
   <form action="/changepassword#banner" method="post">
-    <div><input type="password" class="text" name="password" placeholder="password"></div>
-    <div><input type="password" class="text" name="newpassword" placeholder="new password"></div>
-    <div><input type="password" class="text" name="confirmpassword" placeholder="confirm password"></div>
-    <input type="submit" class="button style2" value="change password" name="change_password" />
+    <div><input type="password" class="text" name="password" placeholder="Password"></div>
+    <div><input type="password" class="text" name="newpassword" placeholder="New Password"></div>
+    <div><input type="password" class="text" name="confirmpassword" placeholder="Confirm Password"></div>
+    <input type="submit" class="button style2" value="Change Password" name="change_password" />
   </form>
   {% endif %}
 
   {% if addsite %}
   <header>
-    <h2 id="addsite-header">add site</h2>
+    <h2 id="addsite-header">Add Site</h2>
   </header>
   <form action="/addsite#banner" method="post">
-    <div><input type="text" class="text" name="sitename" placeholder="site name"></div>
+    <div><input type="text" class="text" name="sitename" placeholder="Site name"></div>
     http://cloud-mania.appspot.com/u/
-    <div><input type="text" class="text" name="siteid" placeholder="site id"></div>
-    <input type="submit" class="button style2" value="add site" name="addsite" />
+    <div><input type="text" class="text" name="siteid" placeholder="Site id"></div>
+    <input type="submit" class="button style2" value="Add site" name="addsite" />
   </form>
 
   {% endif %}
   <br>
-  <a href="/logout">logout</a>
+  <a href="/logout">Logout</a>
   {% endif %}
   {% if login %}
   <script>
-alreadyregistered();
+alreadyRegistered();
   </script>
   {% endif %}
   {% else %}
   {% if not reset %}
   {% if not message %}
   <header>
-    <h2 id="forgot-header">forgot password</h2>
+    <h2 id="forgot-header">Forgot Password</h2>
   </header>
   <form action="/forgot#banner" method="post">
-    <div><input type="text" class="text" name="email" placeholder="email"></div>
-    <input type="submit" class="button style2" value="reset password" name="reset" />
+    <div><input type="text" class="text" name="email" placeholder="Email"></div>
+    <input type="submit" class="button style2" value="Reset password" name="reset" />
   </form>
   {% else %}
-  mail sent on your email address to reset password!!<br>
-  <a class="button style2" href="/login#banner">login</a>
+  Mail sent on your email address to reset password!!<br>
+  <a class="button style2" href="/login#banner">Login</a>
   {% endif %}
   {% else %}
   <header>
-    <h2 id="forgot-header">forgot password</h2>
+    <h2 id="forgot-header">Forgot Password</h2>
   </header>
   <form action="/reset#banner" method="post">
-    <div><input type="password" class="text" name="password" placeholder="password"></div>
-    <div><input type="password" class="text" name="confirmpassword" placeholder="confirm password"></div>
+    <div><input type="password" class="text" name="password" placeholder="Password"></div>
+    <div><input type="password" class="text" name="confirmpassword" placeholder="Confirm password"></div>
     <div><input type="hidden" value="{{uuid}}" name="uuid" /></div>
-    <input type="submit" class="button style2" value="change password" name="changepassword1" />
+    <input type="submit" class="button style2" value="Change Password" name="changepassword1" />
   </form>
   {% endif %}
   {% endif %}
@@ -152,10 +152,13 @@ alreadyregistered();
   </a>
   <div class="inner">
     <header>
-      <h2>takes just your<br />
-        few seconds to set up</h2>
+      <h2>- Takes just your<br />
+        - Few seconds to set up</h2>
     </header>
-    <p>register to cloudmania, login your dropbox account than simply take your existing html website, specify the editable areas then copy it to dropbox. you now have a live website with a cms your client use.</p>
+    <p>Register to cloudmania, Login your dropbox account
+    than simply take your existing html website,
+    specify the editable areas then copy it to dropbox.
+    You now have a live website with a cms your client use.</p>
   </div>
 </article>
 
@@ -168,10 +171,10 @@ alreadyregistered();
     <header>
       <h2>features</h2>
     </header>
-    <p>no programming required<br>
-    complete design freedom<br>
-    unlimited scalability<br>
-    nothing to install or maintain<br>
+    <p> - No programming required<br>
+    - Complete design freedom<br>
+    - Unlimited scalability<br>
+    - Nothing to install or maintain<br>
     and many more...</p>
   </div>
 </article>
@@ -181,17 +184,17 @@ alreadyregistered();
 <section id="contactus">
   <article class="container box style3">
     <header>
-      <h2>contact us !! </h2>
-      <p>give your precious feedback below.</p>
+      <h2>Contact us !! </h2>
+      <p>Give your precious feedback below.</p>
     </header>
     <form action='contact#banner' method='POST'>
       <div class="row half">
-        <div class="6u"><input type="text" class="text" name="name" placeholder="name" /></div>
-        <div class="6u"><input type="text" class="text" name="email" placeholder="email" /></div>
+        <div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
+        <div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
       </div>
       <div class="row half">
         <div class="12u">
-          <textarea name="message" placeholder="message"></textarea>
+          <textarea name="message" placeholder="Message"></textarea>
         </div>
       </div>
       <div class="row">
