--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ free for personal and commercial use under the cca 3.0 license (html5up.net/lice
     <h2 id="addsite-header">Add Site</h2>
   </header>
   <form action="/addsite#banner" method="post">
-    <div><input type="text" class="text" name="sitename" placeholder="Site name"></div>
+    <div><input type="text" class="text" name="Sitename" placeholder="Site name"></div>
     http://cloud-mania.appspot.com/u/
-    <div><input type="text" class="text" name="siteid" placeholder="Site id"></div>
+    <div><input type="text" class="text" name="SiteID" placeholder="Site id"></div>
     <input type="submit" class="button style2" value="Add site" name="addsite" />
   </form>
 
